commit 10 - documentação e refatoração . ajustando sintax . melhorias em user controller . alteração de rotas
